# deplorable

./: .gitignore  Cargo.nix  Cargo.toml  README.md  config.yaml  default.nix  example.yaml  shell.nix
content/: _index.md  about.md
layouts/_default/: baseof.html  index.html  single.html
src/: app.rs  config.rs  http.rs  main.rs  nixhub.rs  nixlify.rs  server.rs
static/css/: style.css
