[package]
name = "nixhub"
version = "0.1.0"
authors = ["Amit Aryeh Levy <amit@amitlevy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "*"
curl = "*"
clap = {"version"= "*", features=["yaml"]}
ring = "*"
httparse = "*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "*"
