[package]
name = "deplorable"
version = "0.1.0"
authors = ["Amit Aryeh Levy <amit@amitlevy.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "A simple & small daemon to deploy static website and other code from GitHub webhooks"
repository = "https://github.com/alevy/deplorable"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "~0.5"
curl = "~0.4"
clap = {"version"= "^2.33", features=["yaml"]}
ring = "~0.16"
http = "~0.2"
httparse = "^1.3.4"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.8"
